--- a/content/task4.html
+++ b/content/task4.html
@@ -143,9 +143,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">task3 << <a href='task3.html'>Previous</a> <a href='w5.html'>Next</a> >> w5<br /><h1>task4</h1>
+<p><strong>使用 Onshape 建立平面四連桿系統零組件 (HW2)</strong></p>
+<p>1.在 onshape 上繪製零件</p>
+<p>2.將零件檔匯出成<span> </span><span>.OBJ</span></p>
+<p>3.在 webots 上組裝零件</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/IOlSm8MbzlU" title="webots 建立連桿1" width="959"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/KHVOa19gJv8" title="webots 建立連桿2" width="958"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/BEmwhtHUmjY" title="webots 建立連桿3" width="954"></iframe></p>
-<p></p><br />task3 << <a href='task3.html'>Previous</a> <a href='w5.html'>Next</a> >> w5</div>
+<p>調整後參數設定</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/8KcHg9Hee7E" title="最終參數設定" width="914"></iframe></p><br />task3 << <a href='task3.html'>Previous</a> <a href='w5.html'>Next</a> >> w5</div>
         
     <!-- footer -->
       <div class="container">
