--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -359,10 +359,26 @@ for i in range(1, 67):  # 1 到 66
 </script>
 <div id="brython_div1"></div>
 <h2>task3</h2>
-<h2>task4</h2>
+<p><strong>使用 Solvespace 建立平面四連桿系統零組件 (HW2)</strong></p>
+<p><b>base</b></p>
+<p><b><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/ALPbKQQqb3U?si=X7Lgc7MJUWw2qZU7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></b></p>
+<p><b>link1</b></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/1Zm07cHBegE?si=4QPaCojTIWeSH1wO" title="YouTube video player" width="560"></iframe></p>
+<p>link2</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/J5jfo0zkuzY?si=V1OSrTe0HIWky168" title="YouTube video player" width="560"></iframe></p>
+<p>link3</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/RZ8cDQq3svw?si=m4xvJ8mtGY3w_lki" title="YouTube video player" width="560"></iframe></p>
+<p>shaft1</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/YAnbTnGylZY?si=Eb_iutncSCbsValK" title="YouTube video player" width="560"></iframe></p>
+<p><span>shaft2</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/CdkNO-va_6Y?si=P3RIvo14ROGicZuS" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<p></p>
+<p><b></b></p><h2>task4</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/IOlSm8MbzlU" title="webots 建立連桿1" width="959"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/KHVOa19gJv8" title="webots 建立連桿2" width="958"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/BEmwhtHUmjY" title="webots 建立連桿3" width="954"></iframe></p>
-<p></p><h3>w5</h3>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/8KcHg9Hee7E" title="最終參數設定" width="914"></iframe></p><h3>w5</h3>
 <p>Webots連接練習示範影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/73vdtErA2tI?si=VN-eGWVLXphHcNH_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p>
 <h2>task5</h2>
@@ -404,7 +420,7 @@ for i in range(1, 67):  # 1 到 66
 <p>HW2 (5%): <span style="background-color: #ffff00;">建立由 CAD 繪製零件組成的平面四連桿機構 Webots 模擬場景</span></p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 HW2 - 學員學號</p>
 <p></p>
-<h2>HW3</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/cODJQDip9is" title="國立虎尾科技大學 - 機械設計工程系 - cd2025 HW2 - 41071203" width="885"></iframe></p><h2>HW3</h2>
 <p>HW3 (20%):<span style="background-color: #ffff00;">建立 Webots 桌上籃球遊戲機模擬系統</span></p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 HW3 - 學員學號</p>
 <p></p>
