--- a/content/task3.html
+++ b/content/task3.html
@@ -143,7 +143,22 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='task4.html'>Next</a> >> task4<br /><h1>task3</h1>
-<br />w3 << <a href='w3.html'>Previous</a> <a href='task4.html'>Next</a> >> task4</div>
+<p><strong>使用 Solvespace 建立平面四連桿系統零組件 (HW2)</strong></p>
+<p><b>base</b></p>
+<p><b><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/ALPbKQQqb3U?si=X7Lgc7MJUWw2qZU7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></b></p>
+<p><b>link1</b></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/1Zm07cHBegE?si=4QPaCojTIWeSH1wO" title="YouTube video player" width="560"></iframe></p>
+<p>link2</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/J5jfo0zkuzY?si=V1OSrTe0HIWky168" title="YouTube video player" width="560"></iframe></p>
+<p>link3</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/RZ8cDQq3svw?si=m4xvJ8mtGY3w_lki" title="YouTube video player" width="560"></iframe></p>
+<p>shaft1</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/YAnbTnGylZY?si=Eb_iutncSCbsValK" title="YouTube video player" width="560"></iframe></p>
+<p><span>shaft2</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/CdkNO-va_6Y?si=P3RIvo14ROGicZuS" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<p></p>
+<p><b></b></p><br />w3 << <a href='w3.html'>Previous</a> <a href='task4.html'>Next</a> >> task4</div>
         
     <!-- footer -->
       <div class="container">
