--- a/config/content.htm
+++ b/config/content.htm
@@ -15,7 +15,15 @@
 <p><br/><br/><br/></p>
 <p></p>
 <h1>Tasks</h1>
-<div></div>
+<p><strong>task1 與 task2 任務目的在建立可於近端維護個人作業與協同作業的準備工作:</strong></p>
+<p>      task1 (自行製作可攜程式系統)</p>
+<p>      task2 (使用 SSH 協定執行作業倉儲的推送)</p>
+<p><strong>task3 與 task4 則為 HW2 的內容之一</strong></p>
+<p>      task3 (使用 Solvespace 建立平面四連桿系統零組件)</p>
+<p>      task4 (使用 Onshape 建立平面四連桿系統零組件)</p>
+<p><strong>task5 與 task6 則為 HW3 的主要內容</strong></p>
+<p>      task5 (Webots Tutorial 1 ~3)</p>
+<p>      task6 (Webots Tutorial 4 ~6)</p><h3>Wink</h3>
 <!-- 假如檔案小於 5mb, 將 mp4 檔案放入 downloads 目錄後取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="123" height="630" muted="true" width="1008">
 <source src="./../downloads/123.mp4" type="video/mp4"/></video></div><h2>task1</h2>
