--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -15,7 +15,15 @@
 <p><br/><br/><br/></p>
 <p></p>
 <h1>Tasks</h1>
-<h3>Wink</h3>
+<p><strong>task1 與 task2 任務目的在建立可於近端維護個人作業與協同作業的準備工作:</strong></p>
+<p>      task1 (自行製作可攜程式系統)</p>
+<p>      task2 (使用 SSH 協定執行作業倉儲的推送)</p>
+<p><strong>task3 與 task4 則為 HW2 的內容之一</strong></p>
+<p>      task3 (使用 Solvespace 建立平面四連桿系統零組件)</p>
+<p>      task4 (使用 Onshape 建立平面四連桿系統零組件)</p>
+<p><strong>task5 與 task6 則為 HW3 的主要內容</strong></p>
+<p>      task5 (Webots Tutorial 1 ~3)</p>
+<p>      task6 (Webots Tutorial 4 ~6)</p><h3>Wink</h3>
 <!-- 假如檔案小於 5mb, 將 mp4 檔案放入 downloads 目錄後取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="123" height="630" muted="true" width="1008">
 <source src="./../downloads/123.mp4" type="video/mp4"/></video></div><h2>task1</h2>
@@ -438,12 +446,17 @@ for i in range(1, 67):  # 1 到 66
 <li>上傳學員期中成績</li>
 </ol>
 <p>各週進度:</p>
+<p><strong>第1周</strong><br/>領取倉儲網頁與建立個人網站<br/><strong>第2周</strong><br/>建立list頁面與新增程式碼<br/><strong>第3周</strong><br/>修正錯誤與上傳新程式碼<br/><strong>第4周</strong><br/>製作可攜程式操作影片上傳<br/><strong>第5周</strong><br/>IPV6操作影片上傳<br/><strong>第6周</strong><br/>新增W5頁面與Webots操作影片上傳<br/><strong>第7周</strong><br/>SSH操作影片上傳<br/><strong>第8周</strong><br/>HW1做動影片和原始檔上傳<br/><strong>第9周</strong><br/>Task4與hw2操作影片上傳<br/><strong>第10周</strong><br/>task3操作影片新增、更改Tasks頁面內容、Wink操作影面上傳、完成Midterm內容</p>
+<p></p>
 <p>各週網頁內容:</p>
-<p>期中心得:</p>
+<p><strong>第1周</strong><br/>領取倉儲網頁與建立個人網站<br/><strong>第2周</strong><br/>建立list頁面與新增程式碼<br/><strong>第3周</strong><br/>修正錯誤與上傳新程式碼<br/><strong>第4周</strong><br/>製作可攜程式操作影片上傳<br/><strong>第5周</strong><br/>IPV6操作影片上傳<br/><strong>第6周</strong><br/>新增W5頁面與Webots操作影片上傳<br/><strong>第7周</strong><br/>SSH操作影片上傳<br/><strong>第8周</strong><br/>HW1做動影片和原始檔上傳<br/><strong>第9周</strong><br/>Task4與hw2操作影片上傳<br/><strong>第10周</strong><br/>task3操作影片新增、更改Tasks頁面內容、Wink操作影面上傳、完成Midterm內容</p>
+<p></p>
+<p><strong>期中心得:</strong></p>
+<p>課上學到很多東西，因為很多都是之前沒碰過的，所以回家還需要回去吸收並整理，在這過程中我學到很多東西，像是Webots操作和連桿建立，與一些程式操作模擬等，每周都有盡量跟上進度，並編輯網站與更新倉儲。</p>
+<p></p>
 <p>期中自評影片:</p>
 <p></p>
-<p style="padding-left: 30px;"></p>
-<h1>Exam</h1>
+<p style="padding-left: 30px;"></p><h1>Exam</h1>
 <p>Exam1 (10%): 建立 Webots 基本物件模擬場景</p>
 <p style="padding-left: 30px;">各學員利用 Webots R2025a 套件中的 Shape 物件, 隨堂建立指定的機電系統模擬場景, 並利用 Python 程式進行互動控制.</p>
 <p>Exam2 (10%): 利用 CAD 零組件建立模擬場景 </p>
