--- a/content/Midterm.html
+++ b/content/Midterm.html
@@ -152,12 +152,17 @@ img.add_border {
 <li>上傳學員期中成績</li>
 </ol>
 <p>各週進度:</p>
-<p>各週網頁內容:</p>
-<p>期中心得:</p>
-<p>期中自評影片:</p>
+<p><strong>第1周</strong><br/>領取倉儲網頁與建立個人網站<br/><strong>第2周</strong><br/>建立list頁面與新增程式碼<br/><strong>第3周</strong><br/>修正錯誤與上傳新程式碼<br/><strong>第4周</strong><br/>製作可攜程式操作影片上傳<br/><strong>第5周</strong><br/>IPV6操作影片上傳<br/><strong>第6周</strong><br/>新增W5頁面與Webots操作影片上傳<br/><strong>第7周</strong><br/>SSH操作影片上傳<br/><strong>第8周</strong><br/>HW1做動影片和原始檔上傳<br/><strong>第9周</strong><br/>Task4與hw2操作影片上傳<br/><strong>第10周</strong><br/>task3操作影片新增、更改Tasks頁面內容、Wink操作影面上傳、完成Midterm內容</p>
 <p></p>
-<p style="padding-left: 30px;"></p>
-<br />HW3 << <a href='HW3.html'>Previous</a> <a href='Exam.html'>Next</a> >> Exam</div>
+<p>各週網頁內容:</p>
+<p><strong>第1周</strong><br/>領取倉儲網頁與建立個人網站<br/><strong>第2周</strong><br/>建立list頁面與新增程式碼<br/><strong>第3周</strong><br/>修正錯誤與上傳新程式碼<br/><strong>第4周</strong><br/>製作可攜程式操作影片上傳<br/><strong>第5周</strong><br/>IPV6操作影片上傳<br/><strong>第6周</strong><br/>新增W5頁面與Webots操作影片上傳<br/><strong>第7周</strong><br/>SSH操作影片上傳<br/><strong>第8周</strong><br/>HW1做動影片和原始檔上傳<br/><strong>第9周</strong><br/>Task4與hw2操作影片上傳<br/><strong>第10周</strong><br/>task3操作影片新增、更改Tasks頁面內容、Wink操作影面上傳、完成Midterm內容</p>
+<p></p>
+<p><strong>期中心得:</strong></p>
+<p>課上學到很多東西，因為很多都是之前沒碰過的，所以回家還需要回去吸收並整理，在這過程中我學到很多東西，像是Webots操作和連桿建立，與一些程式操作模擬等，每周都有盡量跟上進度，並編輯網站與更新倉儲。</p>
+<p></p>
+<p>期中自評影片:</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/5XS6IUP1GZw?si=s9P3qjGXNms-xBKU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p>
+<p style="padding-left: 30px;"></p><br />HW3 << <a href='HW3.html'>Previous</a> <a href='Exam.html'>Next</a> >> Exam</div>
         
     <!-- footer -->
       <div class="container">
