--- a/content/IPV6.html
+++ b/content/IPV6.html
@@ -143,7 +143,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">task2 << <a href='task2.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>IPV6</h1>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/eLxXgpoN6eo?si=sdd_dl6ZAi7DP8yX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe><br/>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="716" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/wp6x48cbDEQ" title="IPV6連線操作影片" width="1273"></iframe><br/>
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
 <script>
@@ -222,8 +222,7 @@ for i, student_id in enumerate(student_numbers, 1):
     set_timeout(timeout_callback, i * 100)
 </script>
 </p>
-<div id="brython_div1"></div>
-<br />task2 << <a href='task2.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+<div id="brython_div1"></div><br />task2 << <a href='task2.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
