--- a/config/content.htm
+++ b/config/content.htm
@@ -451,7 +451,7 @@ for i in range(1, 67):  # 1 到 66
 <p>課上學到很多東西，因為很多都是之前沒碰過的，所以回家還需要回去吸收並整理，在這過程中我學到很多東西，像是Webots操作和連桿建立，與一些程式操作模擬等，每周都有盡量跟上進度，並編輯網站與更新倉儲。</p>
 <p></p>
 <p>期中自評影片:</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/5XS6IUP1GZw?si=s9P3qjGXNms-xBKU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="716" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/PfDAywoB-Vc" title="國立虎尾科技大學   機械設計工程系   cd2025 期中自評   41071203" width="1348"></iframe></p>
 <p style="padding-left: 30px;"></p><h1>Exam</h1>
 <p>Exam1 (10%): 建立 Webots 基本物件模擬場景</p>
 <p style="padding-left: 30px;">各學員利用 Webots R2025a 套件中的 Shape 物件, 隨堂建立指定的機電系統模擬場景, 並利用 Python 程式進行互動控制.</p>
