--- a/config/content.htm
+++ b/config/content.htm
@@ -468,7 +468,8 @@ for i in range(1, 67):  # 1 到 66
 <h2>Exam1</h2>
 <p>Exam1 (10%): 建立 Webots 基本物件模擬場景</p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 Exam1 - 學員學號</p>
-<h2>Exam2</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="1102" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/qYk3ka0irrs" title="國立虎尾科技大學 - 機械設計工程系 - cd2025 Exam1 - 41071203" width="2545"></iframe></p>
+<p><a href="/downloads/EX1.zip">EX1檔案</a></p><h2>Exam2</h2>
 <p>Exam2 (10%): 利用 CAD 零組件建立模擬場景</p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 Exam2 - 學員學號</p>
 <h2>Exam3</h2>
