--- a/config/content.htm
+++ b/config/content.htm
@@ -27,7 +27,7 @@
 <!-- 假如檔案小於 5mb, 將 mp4 檔案放入 downloads 目錄後取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="123" height="630" muted="true" width="1008">
 <source src="./../downloads/123.mp4" type="video/mp4"/></video></div><h2>task1</h2>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="716" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/k6_oiI9X6e1" title="w12 hw Jupyter lab 可攜程式執行" width="1348"></iframe></p><h3>list</h3>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/dBnGyxULzss?si=sWDLOByw8O8Owjpz" title="YouTube video player" width="560"></iframe></p><h3>list</h3>
 <p>程式碼</p>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
@@ -118,9 +118,7 @@ ajax.get(url, oncomplete=on_complete)
 <div id="brython_div1"></div>
 <h2>task2</h2>
 <h4><strong>使用 SSH 協定執行作業倉儲的推送操作影片</strong></h4>
-<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/_zHEvS-p3ZI?si=O60uWllqDPJobbWS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></strong></p>
-<p><strong></strong></p>
-<h3>IPV6</h3>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/VjMo25xZ21s?si=1eA0x30V9o5qy4An" title="YouTube video player" width="560"></iframe></p><h3>IPV6</h3>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="716" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/wp6x48cbDEQ" title="IPV6連線操作影片" width="1273"></iframe><br/>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
@@ -375,9 +373,9 @@ for i in range(1, 67):  # 1 到 66
 <p>link3</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="716" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/-D7slbqDy4I" title="link3繪製" width="1273"></iframe></p>
 <p>shaft1</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/YAnbTnGylZY?si=Eb_iutncSCbsValK" title="YouTube video player" width="560"></iframe></p>
+<p>&lt;<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/Nh5Df_1xqlc?si=88cTY2OduPH46WZP" title="YouTube video player" width="560"></iframe></p>
 <p><span>shaft2</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/CdkNO-va_6Y?si=P3RIvo14ROGicZuS" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/3VFwUIMZTCE?si=Ux9MaA7x_CLr4qz7" title="YouTube video player" width="560"></iframe></p>
 <p></p>
 <p></p>
 <p><b></b></p><h2>task4</h2>
@@ -385,10 +383,10 @@ for i in range(1, 67):  # 1 到 66
 <p>1.在 onshape 上繪製零件</p>
 <p>2.將零件檔匯出成<span> </span><span>.OBJ</span></p>
 <p>3.在 webots 上組裝零件</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/IOlSm8MbzlU" title="webots 建立連桿1" width="959"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/KHVOa19gJv8" title="webots 建立連桿2" width="958"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/BEmwhtHUmjY" title="webots 建立連桿3" width="954"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/5dsCyQbrRD8?si=v4zdA5c3tX3Davh3" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/xUgogDhtPWU?si=xsPxEbmX1VqCnhyt" title="YouTube video player" width="560"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/e1DpHirbh-M?si=263Gw-mO7Ne4qD_u" title="YouTube video player" width="560"></iframe></p>
 <p>調整後參數設定</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/8KcHg9Hee7E" title="最終參數設定" width="914"></iframe></p><h3>w5</h3>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/hNYvwNmp3m0?si=sx1w0rE3nRxkg9b9" title="YouTube video player" width="560"></iframe></p><h3>w5</h3>
 <p>Webots連接練習示範影片</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="716" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/nUBimlGcSfQ" title="HW4 webots連接練習加運作" width="1348"></iframe></p><h2>task5</h2>
 <h2>task6</h2>
