--- a/content/task3.html
+++ b/content/task3.html
@@ -145,15 +145,15 @@ img.add_border {
     <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='task4.html'>Next</a> >> task4<br /><h1>task3</h1>
 <p><strong>使用 Solvespace 建立平面四連桿系統零組件 (HW2)</strong></p>
 <p><b>base</b></p>
-<p><b><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="716" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/oViIjeKQftE" title="base繪製" width="1273"></iframe></b></p>
+<p><b><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/oViIjeKQftE" title="base繪製" width="560"></iframe></b></p>
 <p><b>link1</b></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="716" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/FSW8RFyOAS8" title="link1繪製" width="1273"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/FSW8RFyOAS8" title="link1繪製" width="560"></iframe></p>
 <p>link2</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="716" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/kmY0BIbVum8" title="link2繪製" width="1273"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/kmY0BIbVum8" title="link2繪製" width="560"></iframe></p>
 <p>link3</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="716" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/-D7slbqDy4I" title="link3繪製" width="1273"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/-D7slbqDy4I" title="link3繪製" width="560"></iframe></p>
 <p>shaft1</p>
-<p>&lt;<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/Nh5Df_1xqlc?si=88cTY2OduPH46WZP" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/Nh5Df_1xqlc?si=88cTY2OduPH46WZP" title="YouTube video player" width="560"></iframe></p>
 <p><span>shaft2</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/3VFwUIMZTCE?si=Ux9MaA7x_CLr4qz7" title="YouTube video player" width="560"></iframe></p>
 <p></p>
